--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 </section>
   <section>
   <div class="col-md-12">
-    <div class="container">
+    <div class="container" id="connection">
       <a href="https://www.facebook.com/Rapzilla/" target="_blank"> <i class="fa fa-facebook-f" style="font-size:36px"></a></i>
       <a href="https://www.youtube.com/channel/UCuKdWx8L8tGivbCwTElBjOw" target="_blank"> <i class="fa fa-youtube-play" style="font-size:36px;color:red"></a></i>
       <a href="https://www.instagram.com/dgee9279/" target="_blank"><i style="font-size:36px" class="fa">&#xf16d;</i></a>
